# aliases

./: .aliases  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yml
config/: cli.yml
packagers/debian/: Dockerfile  build.sh
releases/0.8-0/debian/: aliases_0.8-0.deb
releases/0.8.0-devel+001/debian/: aliases_0.8.0-devel+001.deb
releases/0.8.0-devel/debian/: aliases_0.8.0-devel.deb
releases/0.8.0/debian/: aliases_0.8.0.deb
releases/0.8.1/debian/: aliases_0.8.1.deb
schemas/: aliases.json
scripts/: build-release-debian.sh  build-release-osx.sh  test-runner.sh
spec/: Dockerfile  add_spec.rb  directories_spec.rb  exec_spec.rb  init_spec.rb  list_spec.rb  rehash_spec.rb  remove_spec.rb  spec_helper.rb  users_spec.rb
spec/dockerfiles/: initialized
spec/support/: docker_command.rb  dockerfile_repository.rb  logger.rb
src/: lib.rs  main.rs
src/aliases/: app.rs  config.rs  execution_workflow.rs  git.rs  mod.rs
src/aliases/builders/: alias_builder.rs  command_builder.rs  mod.rs
src/aliases/collections/: mod.rs
src/aliases/commands/: add.rs  clone_repo.rs  directories.rs  disable_user.rs  enable_user.rs  init.rs  list.rs  mod.rs  move_user.rs  pull_repo.rs  remove.rs  users.rs
src/aliases/factories/: alias_factory.rs  mod.rs  shim_file_factory.rs
src/aliases/models/: alias.rs  alias_file.rs  conditional.rs  mod.rs  user.rs  user_confirmation.rs
src/aliases/repositories/: alias_file_repository.rs  alias_repository.rs  mod.rs  (+1 more)
src/templates/: aliases
tests/: alias_builder.rs  alias_factory.rs  aliases_collection.rs  lib.rs  rehash_command.rs
(+8 files in other folders)
