[package]
name = "aliases"
version = "0.6.0"
authors = ["Seb Glazebrook <sebastian.glazebrook@redbubble.com>"]

[lib]
name = "aliases"
path = "src/lib.rs"

[[bin]]
name = "aliases"
path = "src/main.rs"

[dependencies]
yaml-rust = "0.3.0"
rust-crypto = "0.2.34"
rustc-serialize = "0.3"
tabwriter = "0.1"
countdown = { git = "https://github.com/sebglazebrook/countdown.git" }
crossbeam = "*"

[dependencies.clap]
features = ["yaml"]
version = "2.0.6"

[dev-dependencies]
gag = "*"
stainless = "*"
